{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 5,
  "lineage": "5b1a7b99-c667-f6cf-ca31-15abfb4d6c9b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:320413867981:loadbalancer/net/ec2-instance-beniaws-nlb-d78f/10879705da3acc6a",
            "arn_suffix": "net/ec2-instance-beniaws-nlb-d78f/10879705da3acc6a",
            "dns_name": "ec2-instance-beniaws-nlb-d78f-10879705da3acc6a.elb.eu-west-1.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:320413867981:loadbalancer/net/ec2-instance-beniaws-nlb-d78f/10879705da3acc6a",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "ec2-instance-beniaws-nlb-d78f",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-080e07462be17bfa5"
              },
              {
                "subnet_id": "subnet-08108ebb5481e5592"
              },
              {
                "subnet_id": "subnet-0e27472c727cc7208"
              }
            ],
            "subnets": [
              "subnet-080e07462be17bfa5",
              "subnet-08108ebb5481e5592",
              "subnet-0e27472c727cc7208"
            ],
            "tags": {
              "Name": "ec2-instance-beniaws-nlb-d78f",
              "account_id": "320413867981",
              "business_unit": "infrastructure",
              "environment": "beniaws",
              "purpose": "nlb",
              "region": "eu-west-1",
              "service_name": "ec2",
              "service_resource": "instance"
            },
            "tags_all": {
              "Name": "ec2-instance-beniaws-nlb-d78f",
              "account_id": "320413867981",
              "business_unit": "infrastructure",
              "environment": "beniaws",
              "purpose": "nlb",
              "region": "eu-west-1",
              "service_name": "ec2",
              "service_resource": "instance"
            },
            "vpc_id": "vpc-00065dedc78d79f9d",
            "zone_id": "Z2IFOLAFXWLO4F"
          },
          "dependencies": [
            "data.aws_ami.ec2_ami_base",
            "random_id.detail"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:320413867981:listener/net/ec2-instance-beniaws-nlb-d78f/10879705da3acc6a/213e5a53890b1519",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:320413867981:targetgroup/tf-20230713211359866000000001/6c41fe97e804d3c2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:320413867981:listener/net/ec2-instance-beniaws-nlb-d78f/10879705da3acc6a/213e5a53890b1519",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:320413867981:loadbalancer/net/ec2-instance-beniaws-nlb-d78f/10879705da3acc6a",
            "port": 22,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.network",
            "aws_lb_target_group.ssh",
            "data.aws_ami.ec2_ami_base",
            "random_id.detail"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:320413867981:targetgroup/tf-20230713211359866000000001/6c41fe97e804d3c2",
            "arn_suffix": "targetgroup/tf-20230713211359866000000001/6c41fe97e804d3c2",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:320413867981:targetgroup/tf-20230713211359866000000001/6c41fe97e804d3c2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20230713211359866000000001",
            "port": 22,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00065dedc78d79f9d"
          },
          "dependencies": [
            "aws_lb.network",
            "data.aws_ami.ec2_ami_base",
            "random_id.detail"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "base",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:320413867981:security-group/sg-0e9979eb76776481d",
            "description": "EC2 Instance base security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Default",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e9979eb76776481d",
            "ingress": [
              {
                "cidr_blocks": [
                  "77.225.21.21/32",
                  "37.135.43.0/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2-instance-beniaws-nlb-d78f",
            "name_prefix": "",
            "owner_id": "320413867981",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-instance-beniaws-nlb-d78f",
              "account_id": "320413867981",
              "business_unit": "infrastructure",
              "environment": "beniaws",
              "purpose": "nlb",
              "region": "eu-west-1",
              "service_name": "ec2",
              "service_resource": "instance"
            },
            "tags_all": {
              "Name": "ec2-instance-beniaws-nlb-d78f",
              "account_id": "320413867981",
              "business_unit": "infrastructure",
              "environment": "beniaws",
              "purpose": "nlb",
              "region": "eu-west-1",
              "service_name": "ec2",
              "service_resource": "instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-00065dedc78d79f9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ami.ec2_ami_base",
            "random_id.detail"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-instance-base",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ignore_ami",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    }
  ]
}